--- a/src/pages/lk.scss
+++ b/src/pages/lk.scss
@@ -1,5 +1,5 @@
 .lk-page {
-  background: #e5e5e5;
+  background: #fafafa;
   min-height: 100vh;
   @media screen and (max-width: 767px) {
     background: white;
