--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -18,6 +18,15 @@
     display: flex;
     align-items: center;
   }
+  .header__name {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: left;
+    letter-spacing: 0.25px;
+    color: #000000;
+    width: 100%;
+  }
   .header__burger {
     display: none;
     align-items: center; /* центрируем содержимое кнопки */
