--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -72,6 +72,30 @@
     border-radius: 10px;
     padding: 60px 40px;
     z-index: 10000;
+    .menu-balance {
+      position: absolute;
+      top: 120px;
+      left: 35px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+      min-width: 61px;
+      height: 26.62px;
+      background: #ffffff;
+      border: 1.10909px solid #e3e3e3;
+      border-radius: 66.5455px;
+      p {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 15.5273px;
+        line-height: 19px;
+        letter-spacing: 0.0409739px;
+        color: #000000;
+      }
+      img {
+        margin-right: 7px;
+      }
+    }
     li {
       padding: 17px 0;
       position: relative;
@@ -85,10 +109,15 @@
       &:nth-child(2) {
         margin-bottom: 80px;
         padding-bottom: 0;
+        padding-top: 0;
+        a {
+          padding-left: 0;
+        }
         & a::before {
           display: none;
         }
       }
+
       &:nth-child(4) {
         display: none;
         @media screen and (max-width: 767px) {
