--- a/src/pages/rules.scss
+++ b/src/pages/rules.scss
@@ -48,6 +48,9 @@
     & * {
       z-index: unset;
     }
+    @media screen and (max-height: 867px) {
+      padding-top: 40px;
+     }
     @media screen and (max-width: 767px) {
       padding-top: 8vh;
       min-height: calc(100vh - 67px);
