--- a/src/pages/register.scss
+++ b/src/pages/register.scss
@@ -112,6 +112,9 @@
         width: 125px;
       }
     }
+    @media screen and (max-width: 1525px) {
+      max-width: 1170px;
+    }
     @media screen and (max-width: 1200px) {
       flex-direction: column-reverse;
       max-width: 768px;
@@ -225,8 +228,6 @@
       font-size: 15px;
     }
   }
-
-
 }
 
 .page-auth__form-block {
