--- a/src/components/LK/LKContent/LKSettings/lksettings.scss
+++ b/src/components/LK/LKContent/LKSettings/lksettings.scss
@@ -47,6 +47,7 @@
     // padding-top: 58px !important;
     justify-content: center;
     text-align: center;
+
     .settings-block__mobile-wrapper {
       position: relative;
     }
@@ -57,6 +58,12 @@
       line-height: 15px;
       margin-bottom: 25px;
     }
+  }
+}
+@media screen and (max-width: 767px) {
+  .lk-content .settings-block {
+    padding-left: 2%;
+    padding-right: 2%;
   }
 }
 .settings-block.settings-block_admin {
