--- a/src/pages/addpost.scss
+++ b/src/pages/addpost.scss
@@ -37,8 +37,8 @@
   display: none;
   background: white;
   justify-content: space-between;
-  position:absolute;
-  bottom:0;
+  position: absolute;
+  bottom: 0;
   left: 0;
   width: 100%;
   .brand-page__btn {
@@ -63,6 +63,32 @@
     display: flex;
   }
 }
+.add-post .brand-page__add-description {
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.mobile-descr {
+  width: 100%;
+  border: none;
+  outline: none;
+}
+.add-post .ant-modal-footer {
+  display: flex;
+  justify-content: center;
+  button {
+    &:nth-child(1) {
+      display: none;
+    }
+    &:nth-child(2) {
+      margin: 0;
+      height: 47px;
+      border-radius: 60px;
+      min-width: 247px;
+      border: none;
+    }
+  }
+}
+
 .add-post .brand-page__row {
   img {
     width: 35px;
@@ -97,7 +123,7 @@
   border: none;
   border-bottom: 1px solid #c4c4c4;
   outline: none;
-  // margin-bottom: 50px;
+
 }
 .brand-page__row-input {
   max-width: 50px;
