--- a/src/pages/login.scss
+++ b/src/pages/login.scss
@@ -1,6 +1,10 @@
 .login {
   .page-auth__content {
     min-height: 89vh;
+    @media screen and (max-width: 1525px) {
+      max-width: 1170px;
+      min-height: 66vh;
+    }
   }
   .reset-btn {
     margin-left: 245px;
@@ -13,7 +17,7 @@
     }
     @media screen and (max-width: 767px) {
       margin: auto;
-      margin-top: 20px;;
+      margin-top: 20px;
     }
   }
 }
