--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -11,11 +11,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    .questions-page__bg_rtg {
+      &:nth-child(3n) {
+        animation: moved infinite 17s linear;
+      }
+      &:nth-child(3n + 1) {
+        animation: movedBack infinite 17s linear;
+      }
+      &:nth-child(3n + 2) {
+        animation: movedBackTo infinite 17s linear;
+      }
+    }
     .questions-page__bg {
       position: absolute;
       display: flex;
       align-items: center;
       justify-content: center;
+      &:nth-child(3n) {
+        animation: moved infinite 17s linear;
+      }
+      &:nth-child(3n + 1) {
+        animation: movedBack infinite 17s linear;
+      }
+      &:nth-child(3n + 2) {
+        animation: movedBackTo infinite 17s linear;
+      }
       img {
         position: absolute;
         top: 0;
@@ -394,10 +414,10 @@
     }
     ul {
       -webkit-animation-name: change;
-      -webkit-animation-duration: 6s;
+      -webkit-animation-duration: 7s;
       -webkit-animation-iteration-count: 1;
       animation-name: change;
-      animation-duration: 6s;
+      animation-duration: 7s;
       animation-iteration-count: 1;
       li {
         list-style: none;
@@ -409,9 +429,9 @@
     div {
       height: 100%;
       width: 33.33%;
-      &:hover {
-        transform: perspective(900px) rotate3d(0, -2, 3, -19deg);
-      }
+      // &:hover {
+      //   transform: perspective(900px) rotate3d(0, -2, 3, -19deg);
+      // }
     }
     @media screen and (max-width: 640px) {
       p {
@@ -697,9 +717,9 @@
     max-width: 500px;
     color: #ffffff;
     min-height: 72px;
-    margin-bottom: 200px;
+    margin-bottom: 9vh;
     @media screen and (max-height: 820px) {
-      margin-bottom: 150px;
+      // margin-bottom: 150px;
     }
     @media screen and (max-width: 767px) {
       margin-bottom: 100px;
@@ -781,7 +801,7 @@
     line-height: 145%;
     text-align: center;
     color: #060505;
-    margin-bottom: 210px;
+    margin-bottom: 10vh;
     font-family: Roboto;
     z-index: 4;
   }
@@ -811,7 +831,7 @@
     justify-content: center;
 
     margin-top: 5vh;
-    margin-bottom: 54px;
+    margin-bottom: 0;
   }
   .win__btn {
     display: flex;
@@ -878,5 +898,48 @@
       text-align: center;
       letter-spacing: 0.25px;
     }
+  }
+}
+
+@keyframes moved {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(20px, -20px);
+  }
+  50% {
+    transform: translate(-20, -20px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+@keyframes movedBack {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(-20px, 20px);
+  }
+  50% {
+    transform: translate(20, 20px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+@keyframes movedBackTo {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(-10px, -20px);
+  }
+  50% {
+    transform: translate(10, 30px);
+  }
+  100% {
+    transform: translate(0, 0);
   }
 }
