--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -174,7 +174,7 @@
     .questions-page__bg_c0 {
       width: 83.29px;
       height: 83.29px;
-      top: 455px;
+      top: 45%;
       right: 32%;
       @media screen and (max-width: 767px) {
         top: 1px;
@@ -203,7 +203,7 @@
       left: 17%;
     }
     .questions-page__bg_c6 {
-      top: 362px;
+      top: 39%;
       left: 21%;
       @media screen and (max-width: 767px) {
         top: 50px;
@@ -211,7 +211,7 @@
       }
     }
     .questions-page__bg_c7 {
-      top: 300px;
+      top: 40%;
       right: 16%;
       @media screen and (max-width: 767px) {
         top: 150px;
@@ -275,10 +275,10 @@
     }
   }
   .questions-page__bg_r1 {
-    border-left: 70px solid transparent;
-    border-right: 70px solid transparent;
-    border-bottom: 110px solid #fcd876;
-    top: 425px;
+    border-left: 48px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 87px solid #fcd876;
+    top: 48%;
     transform: rotate(-47.78deg);
     left: 35%;
     @media screen and (max-width: 1090px) {
