--- a/src/pages/transfer.scss
+++ b/src/pages/transfer.scss
@@ -1,10 +1,14 @@
 .transfer-page {
   .lk-content {
-    padding: 0 40px;
+    padding: 0 20px;
     position: relative;
     margin-left: 0;
     background: white;
     position: initial;
+    .lk-content__block {
+      padding-left: 0;
+      padding-right: 0;
+    }
     .donate-block {
       .donate-block__select-card li {
         width: 70px;
