--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -395,9 +395,11 @@
   //////////////////////////////////////////////////////////////////////////////
 
   .questions-page__countdown {
+    width: 100%;
+    height: 250px;
+    // position: absolute;
+    bottom: 0;
     display: flex;
-    // width: 150px;
-    // height: 250px;
     margin: auto;
     font-weight: bold;
     font-size: 250px;
@@ -406,150 +408,105 @@
     color: #000000;
     display: flex;
     flex-direction: column;
+
     position: relative;
+
     .questions-page__countdown-counter {
       height: 250px;
-      overflow: hidden;
+      // overflow: hidden;
       width: 100%;
-    }
-    ul {
-      -webkit-animation-name: change;
-      -webkit-animation-duration: 7s;
-      -webkit-animation-iteration-count: 1;
-      animation-name: change;
-      animation-duration: 7s;
-      animation-iteration-count: 1;
-      li {
-        list-style: none;
-      }
-    }
-    p {
-      font-size: 40px;
-    }
-    div {
-      height: 100%;
-      width: 33.33%;
-      // &:hover {
-      //   transform: perspective(900px) rotate3d(0, -2, 3, -19deg);
-      // }
-    }
-    @media screen and (max-width: 640px) {
-      p {
-        line-height: 99.12%;
-      }
-      span {
-        font-size: 120px;
-      }
-    }
-  }
-}
-@-webkit-keyframes change {
-  0%,
-  12.66%,
-  100% {
-    transform: translate3d(0, 0, 0);
-  }
-  16.66%,
-  29.32% {
-    transform: translate3d(0, -25%, 0);
-  }
-  33.32%,
-  45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-  49.98%,
-  62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-  66.64%,
-  79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%,
-  95.96% {
-    transform: translate3d(0, -25%, 0);
-  }
-}
-@-o-keyframes change {
-  0%,
-  12.66%,
-  100% {
-    transform: translate3d(0, 0, 0);
-  }
-  16.66%,
-  29.32% {
-    transform: translate3d(0, -25%, 0);
-  }
-  33.32%,
-  45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-  49.98%,
-  62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-  66.64%,
-  79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%,
-  95.96% {
-    transform: translate3d(0, -25%, 0);
-  }
-}
-@-moz-keyframes change {
-  0%,
-  12.66%,
-  100% {
-    transform: translate3d(0, 0, 0);
-  }
-  16.66%,
-  29.32% {
-    transform: translate3d(0, -25%, 0);
-  }
-  33.32%,
-  45.98% {
-    transform: translate3d(0, -50%, 0);
-  }
-  49.98%,
-  62.64% {
-    transform: translate3d(0, -75%, 0);
-  }
-  66.64%,
-  79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%,
-  95.96% {
-    transform: translate3d(0, -25%, 0);
-  }
-}
 
-@keyframes change {
+      li {
+        display: flex;
+        align-items: center;
+        height: 250px;
+        justify-content: center;
+        margin: auto;
+        // position: absolute;
+        -webkit-perspective: 600px;
+        -moz-perspective: 600px;
+        -o-perspective: 600px;
+        perspective: 600px;
+        &:hover {
+          transform: rotate3d(100px, 0, 0);
+        }
+        div {
+          width: 50px;
+          height: 100%;
+          overflow: hidden;
+          text-align: center;
+          animation: linear infinite ease;
+          transition: 2s;
+          animation-duration: 1.01s;
+          &:nth-child(1) {
+            animation-name: first;
+          }
+          &:nth-child(2) {
+            animation-name: sec;
+            p {
+              transform: translateX(-100%);
+            }
+          }
+          &:nth-child(3) {
+            animation-name: third;
+            // transform: translateX(85%);
+            p {
+              transform: translateX(-201%);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@keyframes first {
   0%,
-  12.66%,
+  10% {
+    -webkit-transform: unset;
+    -moz-transform: unset;
+    -o-transform: unset;
+    transform: unset;
+  }
+  90%,
   100% {
-    transform: translate3d(0, 0, 0);
+    -webkit-transform: rotateX(360deg);
+    -moz-transform: rotateX(360deg);
+    -o-transform: rotateX(360deg);
+    transform: rotateX(360deg);
   }
-  16.66%,
-  29.32% {
-    transform: translate3d(0, -25%, 0);
+}
+@keyframes sec {
+  0%,
+  10%,
+  20% {
+    -webkit-transform: unset;
+    -moz-transform: unset;
+    -o-transform: unset;
+    transform: unset;
   }
-  33.32%,
-  45.98% {
-    transform: translate3d(0, -50%, 0);
+  93%,
+  100% {
+    -webkit-transform: rotateX(360deg);
+    -moz-transform: rotateX(360deg);
+    -o-transform: rotateX(360deg);
+    transform: rotateX(360deg);
   }
-  49.98%,
-  62.64% {
-    transform: translate3d(0, -75%, 0);
+}
+@keyframes third {
+  0%,
+  20%,
+  30% {
+    -webkit-transform: unset;
+    -moz-transform: unset;
+    -o-transform: unset;
+    transform: unset;
   }
-  66.64%,
-  79.3% {
-    transform: translate3d(0, -50%, 0);
-  }
-  83.3%,
-  95.96% {
-    transform: translate3d(0, -25%, 0);
+  96%,
+  100% {
+    -webkit-transform: rotateX(360deg);
+    -moz-transform: rotateX(360deg);
+    -o-transform: rotateX(360deg);
+    transform: rotateX(360deg);
   }
 }
 
