--- a/src/pages/test.scss
+++ b/src/pages/test.scss
@@ -1,8 +1,12 @@
+
 .test-page {
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  .test-timer {
+    
+  }
   .helped-container {
     height: 100vh;
     width: 100%;
